--- a/SEP1/src/guiView/DisplayLecturers.fxml
+++ b/SEP1/src/guiView/DisplayLecturers.fxml
@@ -9,16 +9,16 @@
       <Button fx:id="goBack" layoutX="969.0" layoutY="621.0" mnemonicParsing="false" onAction="#goBack" text="Back" />
       <TextField layoutX="26.0" layoutY="14.0" text="Search" />
       <ChoiceBox layoutX="227.0" layoutY="14.0" prefWidth="150.0" />
-      <TableView layoutX="26.0" layoutY="60.0" prefHeight="548.0" prefWidth="989.0">
+      <TableView layoutX="26.0" layoutY="60.0" prefHeight="548.0" prefWidth="985.0">
         <columns>
-          <TableColumn prefWidth="304.0" text="Name" />
-          <TableColumn minWidth="0.0" prefWidth="174.0" text="Telephone" />
-            <TableColumn prefWidth="214.0" text="Email" />
-            <TableColumn prefWidth="176.0" text="Course Spec" />
-            <TableColumn prefWidth="120.0" text="Advertisement" />
+          <TableColumn prefWidth="75.0" text="Name" />
+            <TableColumn prefWidth="75.0" text="E-Mail" />
+            <TableColumn prefWidth="126.0" text="Course Specification" />
+            <TableColumn prefWidth="75.0" text="Tel. Number" />
+            <TableColumn prefWidth="167.0" text="Advertisement Requirement" />
         </columns>
       </TableView>
-      <Button layoutX="26.0" layoutY="628.0" mnemonicParsing="false" text="Add New" />
+      <Button onAction="#toAddLecturerScene" layoutX="26.0" layoutY="628.0" mnemonicParsing="false" text="Add New" />
       <Button disable="true" layoutX="120.0" layoutY="628.0" mnemonicParsing="false" prefHeight="31.0" prefWidth="82.0" text="Edit" />
       <Button disable="true" layoutX="220.0" layoutY="628.0" mnemonicParsing="false" prefHeight="31.0" prefWidth="82.0" text="Delete" />
       <Button layoutX="389.0" layoutY="14.0" mnemonicParsing="false" text="Search" />
