Fixed bugs with navigation

--- a/SEP1/src/guiView/AddLecturer.fxml
+++ b/SEP1/src/guiView/AddLecturer.fxml
@@ -5,7 +5,7 @@
 <?import javafx.scene.layout.*?>
 
 
-<AnchorPane fx:controller="guiView.VIAController" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1">
+<AnchorPane fx:id="mainAnchor" fx:controller="guiView.VIAController" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1">
    <children>
       <Label fx:id="txtLabelLecturerName" layoutX="95.0" layoutY="44.0" text="Name:" />
       <Label fx:id="txtLabelLecturerEmail" layoutX="95.0" layoutY="85.0" text="E-mail:" />
