--- a/SEP1/src/guiView/AddMember.fxml
+++ b/SEP1/src/guiView/AddMember.fxml
@@ -4,7 +4,7 @@
 <?import java.lang.*?>
 <?import javafx.scene.layout.*?>
 
-<AnchorPane fx:controller="guiView.VIAController" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="468.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1">
+<AnchorPane fx:id="mainAnchor" fx:controller="guiView.VIAController" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="468.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1">
    <children>
       <Label id="txtLabelMemberName" layoutX="104.0" layoutY="48.0" text="Name" />
       <Label id="txtLabelMemberAge" layoutX="112.0" layoutY="95.0" text="Age" />
