--- a/SEP1/src/guiView/AddMember.fxml
+++ b/SEP1/src/guiView/AddMember.fxml
@@ -21,5 +21,6 @@
       <TextField fx:id="txtFieldMemberEmail" layoutX="252.0" layoutY="249.0" />
       <TextField fx:id="txtFieldMemberCoursePref" layoutX="252.0" layoutY="302.0" />
       <TextField fx:id="txtFieldMemberMembPay" layoutX="252.0" layoutY="354.0" />
+      <Button fx:id="goBack" layoutX="969.0" layoutY="621.0" mnemonicParsing="false" onAction="#toMemberScene" text="Back" />
    </children>
 </AnchorPane>
