--- a/SEP1/src/guiView/MemberTableView.fxml
+++ b/SEP1/src/guiView/MemberTableView.fxml
@@ -9,15 +9,15 @@
       <Button fx:id="goBack" layoutX="969.0" layoutY="621.0" mnemonicParsing="false" onAction="#goBack" text="Back" />
       <TextField layoutX="26.0" layoutY="14.0" text="Search" />
       <ChoiceBox layoutX="227.0" layoutY="14.0" prefWidth="150.0" />
-      <TableView id="tableViewMember" layoutX="26.0" layoutY="60.0" prefHeight="548.0" prefWidth="1004.0">
+      <TableView fx:id="tableViewMember" layoutX="26.0" layoutY="60.0" prefHeight="548.0" prefWidth="1004.0">
         <columns>
-          <TableColumn id="tableColumnName" prefWidth="75.0" text="Name" />
-          <TableColumn id="tableColumnAge" prefWidth="75.0" text="Age" />
-            <TableColumn id="tableColumnAddress" prefWidth="95.0" text="Address" />
-            <TableColumn id="tableColumnTel" prefWidth="185.0" text="Telephone Number" />
-            <TableColumn id="tableColumnEmail" prefWidth="135.0" text="Email Address" />
-            <TableColumn id="tableColumnCoursePref" prefWidth="185.0" text="Course Prefferences" />
-            <TableColumn id="tableColumnMembPay" prefWidth="205.0" text="Membership payment" />
+          <TableColumn fx:id="tableColumnName" prefWidth="75.0" text="Name" />
+          <TableColumn fx:id="tableColumnAge" prefWidth="75.0" text="Age" />
+            <TableColumn fx:id="tableColumnAddress" prefWidth="95.0" text="Address" />
+            <TableColumn fx:id="tableColumnTel" prefWidth="185.0" text="Telephone Number" />
+            <TableColumn fx:id="tableColumnEmail" prefWidth="135.0" text="Email Address" />
+            <TableColumn fx:id="tableColumnCoursePref" prefWidth="185.0" text="Course Prefferences" />
+            <TableColumn fx:id="tableColumnMembPay" prefWidth="205.0" text="Membership payment" />
         </columns>
       </TableView>
       <Button layoutX="26.0" layoutY="628.0" mnemonicParsing="false" text="Add New" />
