--- a/SEP1/src/guiView/MemberView.fxml
+++ b/SEP1/src/guiView/MemberView.fxml
@@ -1,7 +1,9 @@
 <?xml version="1.0" encoding="UTF-8"?>
+
 <?import javafx.scene.control.*?>
 <?import java.lang.*?>
 <?import javafx.scene.layout.*?>
+
 <AnchorPane fx:id="mainAnchor" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="696.0" prefWidth="1075.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="guiView.VIAController">
    <children>
       <Button fx:id="goBack" layoutX="969.0" layoutY="621.0" mnemonicParsing="false" onAction="#goBack" text="Back" />
@@ -18,9 +20,9 @@
             <TableColumn fx:id="tableColumnMemberMembPay" prefWidth="205.0" text="Membership payment" />
         </columns>
       </TableView>
-      <Button onAction="#toAddMemberScene" layoutX="26.0" layoutY="628.0" mnemonicParsing="false" text="Add New" />
+      <Button layoutX="26.0" layoutY="628.0" mnemonicParsing="false" onAction="#toAddMemberScene" text="Add New" />
       <Button disable="true" layoutX="120.0" layoutY="628.0" mnemonicParsing="false" prefHeight="31.0" prefWidth="82.0" text="Edit" />
-      <Button disable="true" layoutX="220.0" layoutY="628.0" mnemonicParsing="false" prefHeight="31.0" prefWidth="82.0" text="Delete" />
+      <Button fx:id="btnDeleteMember" layoutX="215.0" layoutY="628.0" mnemonicParsing="false" onAction="#deleteMember" prefHeight="31.0" prefWidth="82.0" text="Delete" />
       <Button layoutX="389.0" layoutY="14.0" mnemonicParsing="false" text="Search" />
    </children>
 </AnchorPane>
