--- a/SEP1/src/guiView/eventsView.fxml
+++ b/SEP1/src/guiView/eventsView.fxml
@@ -26,7 +26,7 @@
         </columns>
       </TableView>
       <Button onAction="#toAddEventScene" layoutX="26.0" layoutY="628.0" mnemonicParsing="false" text="Add New" />
-      <Button disable="true" layoutX="120.0" layoutY="628.0" mnemonicParsing="false" prefHeight="31.0" prefWidth="82.0" text="Edit" />
+      <Button fx:id ="saveButtonTest" disable="false" layoutX="120.0" layoutY="628.0" mnemonicParsing="false" prefHeight="31.0" prefWidth="82.0" text="Save" onAction="#saveToFile"/>
       <Button disable="true" layoutX="220.0" layoutY="628.0" mnemonicParsing="false" prefHeight="31.0" prefWidth="82.0" text="Delete" />
       <Button layoutX="389.0" layoutY="14.0" mnemonicParsing="false" text="Search" />
    </children>
