--- a/SEP1/src/guiView/AddMember.fxml
+++ b/SEP1/src/guiView/AddMember.fxml
@@ -14,13 +14,13 @@
       <Label fx:id="txtLabelMemberCoursePref" layoutX="67.0" layoutY="308.0" text="Course Preferences" />
       <Label fx:id="txtLabelMemberMembPay" layoutX="61.0" layoutY="360.0" text="Membership Payments" />
       <Button fx:id="btnMemberAdd" layoutX="243.0" layoutY="408.0" mnemonicParsing="false" onAction="#addMember" text="Add Member" />
-      <TextField fx:id="txtFieldMemberName" layoutX="252.0" layoutY="42.0" />
-      <TextField fx:id="txtFieldMemberAge" layoutX="252.0" layoutY="89.0" />
-      <TextField fx:id="txtFieldMemberAddress" layoutX="252.0" layoutY="140.0" />
-      <TextField fx:id="txtFieldMemberTel" layoutX="252.0" layoutY="193.0" />
-      <TextField fx:id="txtFieldMemberEmail" layoutX="252.0" layoutY="249.0" />
-      <TextField fx:id="txtFieldMemberCoursePref" layoutX="252.0" layoutY="302.0" />
-      <TextField fx:id="txtFieldMemberMembPay" layoutX="252.0" layoutY="354.0" />
+      <TextField fx:id="txtFieldAddMemberName" layoutX="252.0" layoutY="42.0" />
+      <TextField fx:id="txtFieldAddMemberAge" layoutX="252.0" layoutY="89.0" />
+      <TextField fx:id="txtFieldAddMemberAddress" layoutX="252.0" layoutY="140.0" />
+      <TextField fx:id="txtFieldAddMemberTel" layoutX="252.0" layoutY="193.0" />
+      <TextField fx:id="txtFieldAddMemberEmail" layoutX="252.0" layoutY="249.0" />
+      <TextField fx:id="txtFieldAddMemberCoursePref" layoutX="252.0" layoutY="302.0" />
+      <TextField fx:id="txtFieldAddMemberMembPay" layoutX="252.0" layoutY="354.0" />
       <Button fx:id="goBack" layoutX="969.0" layoutY="621.0" mnemonicParsing="false" onAction="#toMemberScene" text="Back" />
    </children>
 </AnchorPane>
