--- a/SEP1/src/guiView/DisplayLecturers.fxml
+++ b/SEP1/src/guiView/DisplayLecturers.fxml
@@ -8,7 +8,7 @@
    <children>
       <Button fx:id="goBack" layoutX="969.0" layoutY="621.0" mnemonicParsing="false" onAction="#goBack" text="Back" />
       <TextField fx:id="txtFieldSearchLecturer" layoutX="26.0" layoutY="14.0" text="Search" />
-      <ChoiceBox layoutX="227.0" layoutY="14.0" prefWidth="150.0" />
+      <ChoiceBox fx:id="choiceBoxSearchLecturer" layoutX="227.0" layoutY="14.0" prefWidth="150.0" />
       <TableView fx:id="tableViewLecturer" layoutX="26.0" layoutY="60.0" prefHeight="548.0" prefWidth="985.0">
         <columns>
           <TableColumn fx:id="tableColumnLecturerName" prefWidth="75.0" text="Name" />
