--- a/SEP1/src/guiView/eventsView.fxml
+++ b/SEP1/src/guiView/eventsView.fxml
@@ -6,8 +6,8 @@
 
 <AnchorPane fx:id="mainAnchor" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="696.0" prefWidth="1075.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="guiView.VIAController">
    <children>
-      <Button fx:id="goBack" layoutX="969.0" layoutY="621.0" mnemonicParsing="false" onAction="#goBack" text="Back" />
-      <TextField layoutX="26.0" layoutY="14.0" text="Search" />
+      <Button fx:id="goBack" layoutX="974.0" layoutY="628.0" mnemonicParsing="false" onAction="#goBack" text="Back" />
+      <TextField fx:id="txtFieldSearchEvent" layoutX="26.0" layoutY="14.0" onMouseClicked="#deletetheTextInsideOfTheSearchEventTextField" text="Search" />
       <ChoiceBox layoutX="227.0" layoutY="14.0" prefWidth="150.0" />
       <TableView fx:id="eventsMainTable" layoutX="26.0" layoutY="60.0" prefHeight="548.0" prefWidth="989.0">
         <columns>
@@ -25,9 +25,8 @@
             <TableColumn fx:id="eventTableCol12" prefWidth="92.0" text="Is Finalized" />
         </columns>
       </TableView>
-      <Button onAction="#toAddEventScene" layoutX="26.0" layoutY="628.0" mnemonicParsing="false" text="Add New" />
-      <Button fx:id ="saveButtonTest" disable="false" layoutX="120.0" layoutY="628.0" mnemonicParsing="false" prefHeight="31.0" prefWidth="82.0" text="Save" onAction="#saveToFile"/>
-      <Button fx:id = "eventsDeleteButton" onAction = "#deleteEvent" disable="true" layoutX="220.0" layoutY="628.0" mnemonicParsing="false" prefHeight="31.0" prefWidth="82.0" text="Delete" />
-      <Button layoutX="389.0" layoutY="14.0" mnemonicParsing="false" text="Search" />
+      <Button layoutX="26.0" layoutY="628.0" mnemonicParsing="false" onAction="#toAddEventScene" text="Add New" />
+      <Button fx:id="saveButtonTest" disable="false" layoutX="120.0" layoutY="628.0" mnemonicParsing="false" onAction="#saveToFile" prefHeight="25.0" prefWidth="82.0" text="Save" />
+      <Button fx:id="eventsDeleteButton" disable="true" layoutX="220.0" layoutY="628.0" mnemonicParsing="false" onAction="#deleteEvent" prefHeight="25.0" prefWidth="82.0" text="Delete" />
    </children>
 </AnchorPane>
