--- a/SEP1/src/guiView/MemberView.fxml
+++ b/SEP1/src/guiView/MemberView.fxml
@@ -8,7 +8,7 @@
    <children>
       <Button fx:id="goBack" layoutX="969.0" layoutY="621.0" mnemonicParsing="false" onAction="#goBack" text="Back" />
       <TextField fx:id="txtFieldSearchMember" layoutX="26.0" layoutY="14.0" text="Search" onMouseClicked="#deletetheTextInsideOfTheSearchMemberTextField" />
-      <ChoiceBox layoutX="227.0" layoutY="14.0" prefWidth="150.0" />
+      <ChoiceBox fx:id="choiceBoxSearchMember" layoutX="227.0" layoutY="14.0" prefWidth="150.0" />
       <TableView fx:id="tableMemberView" layoutX="26.0" layoutY="60.0" prefHeight="548.0" prefWidth="1004.0">
         <columns>
           <TableColumn fx:id="tableColumnMemberName" prefWidth="75.0" text="Name" />
@@ -21,8 +21,6 @@
         </columns>
       </TableView>
       <Button layoutX="26.0" layoutY="628.0" mnemonicParsing="false" onAction="#toAddMemberScene" text="Add New" />
-      <Button disable="true" layoutX="120.0" layoutY="628.0" mnemonicParsing="false" prefHeight="31.0" prefWidth="82.0" text="Edit" />
       <Button fx:id="btnDeleteMember" layoutX="215.0" layoutY="628.0" mnemonicParsing="false" onAction="#deleteMember" prefHeight="31.0" prefWidth="82.0" text="Delete" />
-      <Button layoutX="389.0" layoutY="14.0" mnemonicParsing="false" text="Search" />
    </children>
 </AnchorPane>
