--- a/SEP1/src/guiView/addNewEvent.fxml
+++ b/SEP1/src/guiView/addNewEvent.fxml
@@ -7,7 +7,7 @@
 <AnchorPane fx:id="mainAnchor" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="696.0" prefWidth="1075.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="guiView.VIAController">
    <children>
       <Button fx:id="goBack" layoutX="969.0" layoutY="621.0" mnemonicParsing="false" onAction="#toEventsScene" text="Back" />
-      <Button onAction="#addEvent" layoutX="197.0" layoutY="590.0" mnemonicParsing="false" text="Save" />
+      <Button layoutX="197.0" layoutY="590.0" mnemonicParsing="false" onAction="#addEvent" text="Save" />
       <TextField fx:id="addEventName" layoutX="136.0" layoutY="41.0" />
       <Label layoutX="62.0" layoutY="46.0" text="Name" />
       <Label layoutX="62.0" layoutY="85.0" text="Date" />
@@ -26,5 +26,8 @@
       <TextField fx:id="addEventMinPartic" layoutX="136.0" layoutY="356.0" />
       <Label layoutX="13.0" layoutY="408.0" text="Max Participants" />
       <TextField fx:id="addEventMaxPartic" layoutX="136.0" layoutY="403.0" />
+      <Button fx:id="btnAddLecturerToEvent" layoutX="14.0" layoutY="452.0" mnemonicParsing="false" onAction="#addLecturerToTheEventScene" text="Add Lecturer to the Event" />
+      <Label fx:id="txtLabelAddLecturerToTheEvent" layoutX="39.0" layoutY="496.0" text="Lecturer:" />
+      <TextField fx:id="txtFieldAddLecturerToTheEvent" editable="true" layoutX="136.0" layoutY="492.0" />
    </children>
 </AnchorPane>
