Finished. Finally. Kill me now.

--- a/SEP1/src/guiView/eventsView.fxml
+++ b/SEP1/src/guiView/eventsView.fxml
@@ -27,6 +27,7 @@
       <Button layoutX="26.0" layoutY="628.0" mnemonicParsing="false" onAction="#toAddEventScene" text="Add New" />
       <Button fx:id="btnAddMemberToEvent" disable="true" layoutX="254.0" layoutY="628.0" mnemonicParsing="false" onAction="#addMemberToEvent" prefHeight="31.0" prefWidth="178.0" text="Add Member to Event" />
       <Button fx:id="eventsDeleteButton" disable="true" layoutX="145.0" layoutY="628.0" mnemonicParsing="false" onAction="#deleteEvent" prefHeight="25.0" prefWidth="82.0" text="Delete" />
-      <Button fx:id="btnFinalizeEvent" disable="true" layoutX="449.0" layoutY="628.0" mnemonicParsing="false" onAction="#finalizeEvent" text="Finalize Event" />
+      <Button fx:id="btnFinalizeEvent" disable="true" layoutX="577.0" layoutY="628.0" mnemonicParsing="false" onAction="#finalizeEvent" text="Finalize Event" />
+      <Button fx:id="viewEventMemberList" disable="true" layoutX="445.0" layoutY="628.0" mnemonicParsing="false" onAction="#viewMembersOfEvent" text="View Members" />
    </children>
 </AnchorPane>
